--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.C3TCm3I_.js",
+    "file": "_app/immutable/entry/app.C7lJf8N3.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -17,7 +17,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.Bm7_mu8m.js",
+    "file": "_app/immutable/nodes/0.X89oDbgX.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
@@ -27,11 +27,11 @@
       "_BNRMaQ6w.js"
     ],
     "css": [
-      "_app/immutable/assets/0.TGbUEWRt.css"
+      "_app/immutable/assets/0.b0CfVk16.css"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.0s4f6l83.js",
+    "file": "_app/immutable/nodes/1.D0TcixbG.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -41,7 +41,7 @@
       "_Dl3TYve1.js",
       "_BNRMaQ6w.js",
       "_d8qabzM9.js",
-      "_DV8KPn8A.js"
+      "_D7HISDIr.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
@@ -74,8 +74,8 @@
       "_BNRMaQ6w.js"
     ]
   },
-  "_DV8KPn8A.js": {
-    "file": "_app/immutable/chunks/DV8KPn8A.js",
+  "_D7HISDIr.js": {
+    "file": "_app/immutable/chunks/D7HISDIr.js",
     "name": "entry",
     "imports": [
       "_BNRMaQ6w.js",
@@ -98,12 +98,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.C3vwDF-9.js",
+    "file": "_app/immutable/entry/start.7-JbjRAR.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_DV8KPn8A.js"
+      "_D7HISDIr.js"
     ]
   }
 }
