--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "npx vite dev",
-	"build": "npx vite build",
+    "build": "npx vite build",
     "preview": "npx vite preview",
-	"prepare": "npx svelte-kit sync",
+    "prepare": "echo skipped",
     "check": "npx svelte-kit sync && npx svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "npx svelte-kit sync && npx svelte-check --tsconfig ./tsconfig.json --watch",
     "test:unit": "npx vitest",
@@ -15,12 +15,19 @@
     "test:e2e": "npx playwright test",
     "format": "npx prettier --write .",
     "lint": "npx prettier --check . && npx eslint .",
-    "docker-build": "docker build -t sveltekit-app:latest .",
-    "docker-run": "docker run -p 3000:3000 --name sveltekit-app-container sveltekit-app:latest",
-    "docker-stop": "docker stop sveltekit-app-container || true",
-    "docker-rm": "docker rm sveltekit-app-container || true",
-    "docker-rebNrun": "npm run docker-stop && npm run docker-rm && npm run docker-build && npm run docker-run",
-    "ngrok-run": "ngrok http --domain=boxer-calm-molly.ngrok-free.app 8080"
+    "docker:build": "docker build -t sveltekit-app:latest .",
+    "docker:run": "docker run -p 3000:3000 --name sveltekit-app-container sveltekit-app:latest",
+    "docker:stop": "docker stop sveltekit-app-container || true",
+    "docker:rm": "docker rm sveltekit-app-container || true",
+    "docker:rebNrun": "npm run docker:stop && npm run docker:rm && npm run docker:build && npm run docker:run",
+    "ngrok:run": "ngrok http --domain=boxer-calm-molly.ngrok-free.app 8080",
+    "open:github": "open-cli https://github.com/MauricioCastro16/IntegracionContinua",
+    "open:jenkins": "start /B ngrok http --domain=boxer-calm-molly.ngrok-free.app 8080 && timeout 5 && open-cli http://boxer-calm-molly.ngrok-free.app",
+    "open:render": "open-cli https://dashboard.render.com/web/srv-d0v310a4d50c73e49s10",
+    "open:slack": "open-cli https://feedbackpruebasic.slack.com",
+    "open:docker": "powershell -Command \"Start-Process 'C:\\Program Files\\Docker\\Docker\\Docker Desktop.exe'\"",
+    "open:apps": "start \"\" \"C:\\Program Files\\Docker\\Docker\\Docker Desktop.exe\" && start \"\" \"C:\\Users\\castr\\AppData\\Local\\GitHubDesktop\\GitHubDesktop.exe\"",
+    "open": "npm run open:apps && npm run open:github && npm run open:jenkins && npm run open:render && npm run open:slack"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
@@ -38,6 +45,7 @@
     "eslint-plugin-svelte": "^3.0.0",
     "globals": "^16.0.0",
     "jsdom": "^26.0.0",
+    "open-cli": "^8.0.0",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
