--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "open": "npm run open:apps && npm run open:github && npm run open:jenkins && npm run open:render && npm run open:slack && npm run open:jira",
     "jira:update": "node scripts\\update-jira.js",
     "commit": "node scripts\\interactive-commit.js",
-    "push": "node scripts\\push.js"
+    "push": "node scripts\\push.js",
+    "explain:unit": "node scripts\\explain-test-errors.js"
 
   },
   "devDependencies": {
