--- a/package.json
+++ b/package.json
@@ -61,5 +61,16 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
 		"vitest": "^3.2.3"
+	},
+	"engines": {
+		"node": "20.x"
+	},
+	"dependencies": {
+		"axios": "^1.9.0",
+		"chalk": "^5.4.1",
+		"dotenv": "^16.5.0",
+		"inquirer": "^12.6.3",
+		"node-fetch": "^3.3.2",
+		"simple-git": "^3.27.0"
 	}
 }
