--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@
 
 # Clave de API para OpenRouter
 OPENROUTER_API_KEY=tu_clave_aqui
-
 # Credenciales para acceso a la API de Jira
 JIRA_USER=tu_email_o_usuario
 JIRA_TOKEN=tu_token_personal
+# Clave de API para Render
+RENDER_API_KEY=tu_clave_aqui
