--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"dotenv": "^16.5.0",
 		"inquirer": "^12.6.3",
 		"node-fetch": "^3.3.2",
+		"open-cli": "^8.0.0",
 		"simple-git": "^3.27.0"
 	}
 }
