--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ JIRA_USER=tu_email_o_usuario
 JIRA_TOKEN=tu_token_personal
 # Clave de API para Render
 RENDER_API_KEY=tu_clave_aqui
+# URLs de servicios
+GITHUB_URL=https://tu_girhub_url
+NGROK_DOMAIN_JENKINS_URL=tu_dominio_ngrok
+RENDER_URL=https://tu_render_url
+SLACK_URL=https://tu_slack_url
+JIRA_URL=https://tu_jira_url
