--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 		"jira:update": "node scripts\\update-jira.js",
 		"commit": "node scripts\\interactive-commit.js",
 		"push": "node scripts\\push.js",
-		"gitflow": "node scripts\\gitflow.js",
+		"gitflow": "node scripts\\interactive-branching.js",
 		"explain:unit": "node scripts\\explain-test-errors.js",
 		"epic-final": "open-cli \"https://youtu.be/8sgycukafqQ?si=4lc1Y5Y-1JrUrct1^&t=66\""
 	},
