PruebasE2E y Calculadora arreglada
SCRUM-5

#done

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ RENDER_API_KEY=tu_clave_aqui
 # URLs de servicios
 GITHUB_URL=https://tu_girhub_url
 NGROK_DOMAIN_JENKINS_URL=tu_dominio_ngrok
-RENDER_URL=https://tu_render_url
+RENDER_URL=https://tu_render_url_dashboard
+RENDER_URL_DEPLOY=https://tu_render_url_deploy
 SLACK_URL=https://tu_slack_url
 JIRA_URL=https://tu_jira_url
