--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"lint": "prettier --check . && eslint .",
 		"test:unit": "vitest",
 		"test": "npm run test:unit -- --run && npm run test:e2e",
-		"test:e2e": "playwright test",
+		"test:e2e": "npx playwright test",
+		"cambiarEntornoE2E": "node scripts/test-e2e.js",
 		"docker:build": "docker build -t sveltekit-app:latest .",
 		"docker:run": "docker run -p 3000:3000 --name sveltekit-app-container sveltekit-app:latest",
 		"docker:stop": "docker stop sveltekit-app-container || true",
