--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint": "prettier --check . && eslint .",
 		"test:unit": "vitest",
 		"test:e2e": "npx playwright test",
+		"coverage": "vitest run --coverage",
 		"test": "npm run test:unit -- --run && npm run test:e2e",
 		"cambiarEntornoE2E": "node scripts/test-e2e.js",
 		"docker:build": "docker build -t sveltekit-app:latest .",
@@ -33,6 +34,7 @@
 		"commit": "node scripts\\interactive-commit.js",
 		"push": "node scripts\\push.js",
 		"explain:unit": "node scripts\\explain-test-errors.js",
+		"explain:coverage": "node scripts\\explain-coverage-test.js",
 		"epic-final": "open-cli \"https://youtu.be/8sgycukafqQ?si=4lc1Y5Y-1JrUrct1^&t=66\"",
 		"help": "node scripts\\help.js"
 	},
@@ -48,6 +50,8 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"@vitest/coverage-istanbul": "^3.2.3",
+		"@vitest/coverage-v8": "^3.2.3",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
