--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"test:e2e": "npx playwright test",
 		"coverage": "vitest run --coverage",
 		"test": "npm run test:unit -- --run && npm run test:e2e",
-		"cambiarEntornoE2E": "node scripts/test-e2e.js",
+		"test:e2e:change": "node scripts/test-e2e.js",
 		"docker:build": "docker build -t sveltekit-app:latest .",
 		"docker:run": "docker run -p 3000:3000 --name sveltekit-app-container sveltekit-app:latest",
 		"docker:stop": "docker stop sveltekit-app-container || true",
@@ -52,8 +52,9 @@
 		"@testing-library/svelte": "^5.2.4",
 		"@vitest/coverage-istanbul": "^3.2.3",
 		"@vitest/coverage-v8": "^3.2.3",
-		"eslint": "^9.18.0",
+		"eslint": "^9.28.0",
 		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-complexity": "^1.0.2",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
 		"jsdom": "^26.0.0",
