--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,4 @@ RENDER_URL=https://tu_render_url_dashboard
 RENDER_URL_DEPLOY=https://tu_render_url_deploy
 SLACK_URL=https://tu_slack_url
 JIRA_URL=https://tu_jira_url
+BASE_URL_E2E=entorno_de_pruebas_e2e
